# wwebs

./: Cargo.toml  README.md
examples/dynamic-hello/: .logger  index.html
examples/dynamic-hello/gatekept/: .gatekeeper1  index.html
examples/example-gem-keys/: .gitignore  gen.sh
examples/static-hello/: index.html
examples/static-hello/subdir/: .wwebs.toml
src/: lib.rs  main.rs
src/files/: wwebs.rs
src/gemini/: mod.rs
src/http/: mod.rs
src/server/: mod.rs
src/structures/: request.rs  response.rs
src/traits/: protocol.rs
